0.1.2 - Фикс названия кодировки