@@ -144,13 +144,13 @@ public class HttpClient implements BaseHttpClient {
                     if (encodedFilename.startsWith("UTF-8''")) {
                         encodedFilename = encodedFilename.substring(7);
                     }
-                    encodedFilename = java.net.URLDecoder.decode(encodedFilename, java.nio.charset.StandardCharsets.UTF_8);
-                    filename = java.net.URLDecoder.decode(encodedFilename, java.nio.charset.StandardCharsets.UTF_8);
+                    encodedFilename = java.net.URLDecoder.decode(encodedFilename, "UTF-8");
+                    filename = java.net.URLDecoder.decode(encodedFilename, "UTF-8");
                 } else if (contentDisposition.contains("filename=")) {
                     int startIndex = contentDisposition.indexOf("filename=") + 9;
                     filename = contentDisposition.substring(startIndex).split(";")[0].trim();
                     filename = filename.replace("\"", "");
-                    filename = java.net.URLDecoder.decode(filename, java.nio.charset.StandardCharsets.UTF_8);
+                    filename = java.net.URLDecoder.decode(filename, "UTF-8");
                 }
             }
 
